--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <header></header>
     <main></main>
     <footer></footer>
+    <button type="button" id="btn">Click aquí</button>
     <script src="index.js" type="module"></script>
   </body>
 </html>
