--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,27 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>Top Secret</header>
+    <main>Mensajes codificados para compartir con tus patas</main>
+    <summary>Ingresa tu mensaje aquí</summary>
 
+    <textarea name="box1" rows="8" cols="80"></textarea>
+
+    <form class="" action="index.html" method="post">
+
+      <summary>Elige número de desplazamiento</summary>
+
+      <select class="" name="">
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+
+      </select>
+    </form>
+
+
+    <footer></footer>
     <script src="index.js" type="module"></script>
   </body>
 </html>
