--- a/src/index.html
+++ b/src/index.html
@@ -5,28 +5,43 @@
     <title>Caesar Cipher</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <header>Top Secret</header>
-    <main>Mensajes codificados para compartir con tus patas</main>
-    <summary>Ingresa tu mensaje aquí</summary>
 
-    <textarea name="box1" rows="8" cols="80"></textarea>
+  <body>
+    <strong>
+    <header>logo</header>
+
+    <h1 id="titulo">Top Secret</h1>
+    </strong>
+    <h2 id="subtitulo">Codifica tus mensajes</h2>
+    <br>
+    <main id="bienvenida">Un lenguaje exclusivo para utilizar con tus BFF</main>
+    <br>
 
     <form class="" action="index.html" method="post">
 
-      <summary>Elige número de desplazamiento</summary>
+    <textarea name="box1" rows="8" cols="80" placeholder="Ingresa tu mensaje aquí"></textarea>
+    <br>
+      <label for="desplazmientto">Elige número de desplazamiento</label>
 
-      <select class="" name="">
+      <select class="" name="opciones" id="desplazamiento">
         <option value="3">3</option>
         <option value="4">4</option>
         <option value="5">5</option>
         <option value="6">6</option>
-
       </select>
-    </form>
+      <br><br>
 
+      <input type="button" name="btn1" value="Codificar" id="boton1">
+      <input type="button" name="btn2" value="Decodificar" id="boton2">
+      <br><br>
+      <textarea name="box2" rows="8" cols="80"></textarea>
+      <br><br>
+      <input type="button" name="btn3" value="Limpiar" id="boton3">
+
+    </form>
 
     <footer></footer>
     <script src="index.js" type="module"></script>
+
   </body>
 </html>
