--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
 
   <body>
     <strong>
-    <header>logo</header>
+    <header>
+<img src="fotos/image1.jpg" alt="" width="150" height="150">
+    </header>
 
     <h1 id="titulo">Top Secret</h1>
     </strong>
@@ -19,22 +21,22 @@
 
     <form class="" action="index.html" method="post">
 
-    <textarea name="box1" rows="8" cols="80" placeholder="Ingresa tu mensaje aquí"></textarea>
+    <textarea name="box1" rows="8" cols="80" placeholder="Ingresa tu mensaje aquí" id="caja1"></textarea>
     <br>
       <label for="desplazmientto">Elige número de desplazamiento</label>
 
-      <select class="" name="opciones" id="desplazamiento">
+      <select class="" name="opciones" id="btn-desplazar">
         <option value="3">3</option>
         <option value="4">4</option>
         <option value="5">5</option>
         <option value="6">6</option>
       </select>
-      <br><br>
+        <br><br>
 
       <input type="button" name="btn1" value="Codificar" id="boton1">
       <input type="button" name="btn2" value="Decodificar" id="boton2">
       <br><br>
-      <textarea name="box2" rows="8" cols="80"></textarea>
+      <textarea name="box2" rows="8" cols="80" id="caja2"></textarea>
       <br><br>
       <input type="button" name="btn3" value="Limpiar" id="boton3">
 
