--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
       <br><br>
       <textarea name="box2" rows="8" cols="80" id="caja2"></textarea>
       <br><br>
-      <input type="button" name="btn3" value="Limpiar" id="boton3">
+      <input type="reset" name="btn3" value="Limpiar" class="" id="boton3">
 
     </form>
 
