--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,10 @@
     </header>
     <br>
     <main id="bienvenida">
-      <p>Un lenguaje exclusivo para utilizar con tus BFF</p>
+      <mark>
       <h1 id="titulo">Top Secret</h1>
       <h2 id="subtitulo">Codifica tus mensajes</h2>
+      <p>Un lenguaje exclusivo para utilizar con tus BFF</p>
     </main>
     <br>
     <form>
