--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,9 @@
       <br><br>
       <input type="reset" name="btn3" value="Limpiar" class="" id="boton3">
       </form>
-      <footer></footer>
+      <br>
+      <footer>by@soni.cortez.ll</footer>
+      
     <script src="index.js" type="module"></script>
 
   </body>
