--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <img src="fotos/image1.jpg" alt="" width="150" height="150">
+        <img src="fotos/icono.png" class="logo" width="50" height="40">
     </header>
     <br>
     <main id="bienvenida">
