--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,15 @@
     <header>
         <img src="fotos/icono.png" class="logo" width="50" height="40">
     </header>
-    <br>
-    <main id="bienvenida">
+
+    <main>
       <h1 class="titulo">Top Secret</h1>
       <h2 class="subtitulo">Codifica tus mensajes</h2>
-      <p class="texto">Un lenguaje exclusivo para utilizar con tus BFF. Solo debes ingresar tu texto,
-         indicar el número de desplazamiento que deseas utilizar, dar click y tu mensaje
-         estará listo para ser enviado</p>
+      <p class="textoInicio">Un lenguaje exclusivo para utilizar con tus BFF</p>
     </main>
-    <br>
     <form>
+       <p class="instrucciones">Ingresa tu texto, elige el número de desplazamiento, dale click y tu mensaje
+        estará listo para ser enviado</p>
        <textarea name="box1" rows="8" cols="80" placeholder="Ingresa tu mensaje aquí" id="caja1" class="contenedor" required></textarea>
        <br>
        <label for="desplazmiento">Elige número de desplazamiento</label>
@@ -32,7 +31,6 @@
        <br><br>
        <input type="reset" name="btn3" value="Limpiar" class="boton" id="boton3">
     </form>
-       <br>
        <footer>
          <p class="pie">by@soni.cortez.ll</p>
        </footer>
